AKSfiles/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: vaideesh30/mytodolistappaks:backend-1.14 # Replace with your image
        ports:
        - containerPort: 5000
