AKSfiles/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # disable SSL redirect for now
spec:
  ingressClassName: nginx
  rules:
  - host: vaideeshtest.com  # Replace with your actual LoadBalancer IP or a custom domain if desired
    http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
      - path: /mongodb
        pathType: Prefix
        backend:
          service:
            name: mongodb-service
            port:
              number: 27017
